tests/diagnostics/expressions/calls/invalid_call_target/expect.txt
# exit: 1
input/lib.coppice:2:13: error: invalid call target
      return (1)(2)
              ^
